fixed alignment , and add images

--- a/styles/sidebar/toolsHomeSidebar.module.css
+++ b/styles/sidebar/toolsHomeSidebar.module.css
@@ -18,11 +18,12 @@
   }
   
   .logo {
+    
     margin-top: 20px;
     font-weight: bold;
     display: flex;
     align-items: center;
-    text-align: center;
+    text-align: start;
     justify-content: space-evenly;
     color: #FFFFFF;
     font-size: 24px;
@@ -80,10 +81,8 @@ text-align: left;
   }
   
 .headingss{
+  padding-bottom: 5px;
   color: #FFFFFF;
-  margin-left: 10px;
-  margin-bottom: 10px;
- 
   font-size: 13px;
   font-weight: 400;
   line-height: 15.51px;
