--- a/styles/sidebar/videoCreation.module.css
+++ b/styles/sidebar/videoCreation.module.css
@@ -6,17 +6,17 @@
   
    }
 
+
   .navsection {
     display: flex;
     justify-content: space-between; 
     align-items: center; 
     text-align: center;
     background: #1C1C1C;
-    width: 1513px;
+    width: 100%;
     height: 72px;
-    gap: 0px;
-    border: 0px 0px 0.7px 0px;
-    opacity: 0px;
+   
+    border-bottom: 0.5px solid #3F3F3F;
    
   }
   
@@ -52,16 +52,17 @@
     justify-content: space-between;
     background-color: #268BFF;
    } */
+   
    .sidebar {
-    background: #1C1C1C;
+    /* background: #1C1C1C; */
     border-right: 0.5px solid #3F3F3F;
-    max-width: 100%; /* Test with a fixed width */
+    width: 50% !important;  /* Reasonable width increase */
     padding: 20px;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: center;
+}
 
-   }
   .arrow{
     margin-right: 10px;
    }
@@ -153,11 +154,13 @@ text-align: left;
     justify-content: center;
     align-items: center;
     margin-top: auto;
-    background-color: #2e2d2b;
+    /* background-color: #2e2d2b; */
     border: 1px solid;
+    background-color: #171C5E;
     padding: 10px 0px;
     box-shadow: #171717;
     border-radius: 10px;
+   
   }
   
   .upgradeButton {
@@ -354,8 +357,8 @@ opacity: 0px;
 
 /* search box */ 
 .searchContainer {
-    margin: 20px 50px;
-    width: 90%;
+    margin: 2rem 8rem;
+    width: 80%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -395,6 +398,7 @@ opacity: 0px;
   }
   
   .generateButton{
+
     background: linear-gradient(110.25deg, #8A71FF 14.25%, #6949FF 47.06%);
     margin-left: 10px;
     border: none;
